--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -19,7 +19,7 @@ RUN set -e \
        # For GD (2fa module)
        libpng-dev libjpeg-turbo-dev freetype-dev \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ \
-    && docker-php-ext-install gd pdo pdo_mysql pdo_pgsql \
+    && docker-php-ext-install gd pdo pdo_mysql \
     && mkdir ${CYPHT_DEST} \
     && cd ${CYPHT_DEST} \
     && mkdir /tmp/cypht-temp \
